--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
       <!-- logo -->
-      <h1>Exceptional Realty Group</h1>
+      <h1 id="headerCap">Exceptional Realty Group</h1>
 
       <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <a id="navBarLinks" href="index.html">About</a>
+        <a id="navBarLinks" href="new-properties.html">New Properties</a>
+        <a id="navBarLinks" href="real-estate-listings.html">Listings</a>
+        <a id="navBarLinks" href="market-report.html">Market Report</a> 
+        <a id="navBarLinks" href="contact.html">Contact</a> 
+        <a id="navBarLinks" href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
 
@@ -21,21 +26,21 @@
         <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
       </figure>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+      <p class="textBlock">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
+      <p class="textBlock">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
     <section id="details">
-      <div>
+    <div class="footer">
         <h3>Contact</h3>
         <p>
-          <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
+          <a id="footerLinks" href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
           +1 710 555 1234<br>
           @fakeRealty
         </p>
       </div>
-      
-      <div>
+     
+      <div class="footer">
         <h3>Correspondence</h3>
         <p>
           Exceptional Realty<br>
@@ -44,21 +49,21 @@
         </p>
       </div>
 
-      <div>
+      <div class="footer">
         <h3>Links</h3>
         <p>
-          <a href="#" target="_blank">Home Restoration</a><br>
-          <a href="#" target="_blank">Affordable Mortgages</a><br>
-          <a href="#" target="_blank">Professional Moving Crew</a>
+          <a id="footerLinks" href="#" target="_blank">Home Restoration</a><br>
+          <a id="footerLinks" href="#" target="_blank">Affordable Mortgages</a><br>
+          <a id="footerLinks" href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
 
-      <div>
-        <h3>Follow</h3>
+      <div class="footer">
+        <h3 class="child">Follow</h3>
         <p>
-          <a href="#" target="_blank">YouTube</a><br>
-          <a href="#" target="_blank">Facebook</a><br>
-          <a href="#" target="_blank">Twitter</a>
+          <a id="footerLinks" href="#" target="_blank">YouTube</a><br>
+          <a id="footerLinks" href="#" target="_blank">Facebook</a><br>
+          <a id="footerLinks" href="#" target="_blank">Twitter</a>
         </p>
       </div>
     </section>
